# fed

./: ARCHITECTURE.md  Cargo.toml  README.md
src/: args.rs  main.rs
src/gui/: colors.rs  container.rs  editor.rs  files.rs  mod.rs  rect.rs  run.rs  traits.rs  widget.rs
src/input/: mod.rs  vim_input.rs
src/lsp/: client.rs  mod.rs  raw_client.rs  request.rs
src/model/: editor_state.rs  mod.rs  open_file.rs  text_model.rs
src/syntax/: highlighter.rs  mod.rs  text-mate-grammar - Copy.rs  text_mate_grammar.rs
