[package]
name = "fed"
version = "0.1.0"
authors = ["fourtf <tf.four@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

skia-safe = { version = "0", features = ["gl"] }
glutin = ""
gl = ""

im = "15"

clap = "3.0.0-beta.2"

phf = { version = "0.8", features = ["macros"] }

clipboard = "0.5"
